crates/hird-codegen/tests/snapshots/emit__snapshot_actor_gen_server_cast_only.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "behaviour_module(program(\"Boot\"), \"Boot\", \"hird_counter\")"
---
%% Generated from src/boot.hird by the Hirð compiler. Do not edit.
%% src/boot.hird:2
-module(hird_counter).
-behaviour(gen_server).
-export([start_link/1]).
-export([init/1, handle_call/3, handle_cast/2]).

start_link(S) ->
    gen_server:start_link(?MODULE, S, []).

init(S) ->
    {ok, S}.

handle_call(Request, _From, _State) ->
    erlang:error({unexpected_call, Request}).

handle_cast(inc, State@1 = {st, N}) ->
    hird_actor:outcome({continue, {st, N + 1}}, State@1).
