crates/hird-codegen/tests/snapshots/emit__snapshot_actor_multi_param_init.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "emit_joined(program(\"Duo\"), \"Duo\")"
---
%%%% hird_duo.erl
%% Generated from src/duo.hird by the Hirð compiler. Do not edit.
-module(hird_duo).
-export([boot/1, hird_tools@/0]).

%% src/duo.hird:8
boot(_Handlers@) ->
    {ok, Pid@1} = hird_pair:start_link(1, 2),
    Pid@1.

hird_tools@() ->
    #{tools => #{},
        types => #{
            msg => [{nop, <<"Nop"/utf8>>, []}],
            st => [{st, <<"St"/utf8>>, [int]}]}}.

%%%% hird_pair.erl
%% Generated from src/duo.hird by the Hirð compiler. Do not edit.
%% src/duo.hird:2
-module(hird_pair).
-behaviour(gen_server).
-export([start_link/2]).
-export([init/1, handle_call/3, handle_cast/2]).

start_link(A, B) ->
    gen_server:start_link(?MODULE, {A, B}, []).

init({A, B}) ->
    {ok, {st, A + B}}.

handle_call(Request, _From, _State) ->
    erlang:error({unexpected_call, Request}).

handle_cast(nop, State@1 = {st, N}) ->
    hird_actor:outcome({continue, {st, N}}, State@1).
