crates/hird-codegen/tests/snapshots/emit__snapshot_actor_payload_and_tool_dispatch.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "behaviour_module(program(\"Workshop\"), \"Workshop\", \"hird_worker\")"
---
%% Generated from src/workshop.hird by the Hirð compiler. Do not edit.
%% src/workshop.hird:3
-module(hird_worker).
-behaviour(gen_server).
-export([start_link/1]).
-export([init/1, handle_call/3, handle_cast/2]).

start_link(S) ->
    gen_server:start_link(?MODULE, S, []).

init(S) ->
    {ok, S}.

handle_call(Request, _From, _State) ->
    erlang:error({unexpected_call, Request}).

handle_cast({set, X}, State@1 = {st, _}) ->
    hird_actor:outcome({continue, {st, X}}, State@1);
handle_cast(bump, State@1 = {st, N}) ->
    hird_actor:outcome({continue, {st, hird_tool_dispatch:call(audit, [], <<"Worker.handle_msg/Bump"/utf8>>, #{}, #{n => N})}}, State@1).
