crates/hird-codegen/tests/snapshots/emit__snapshot_actor_qualifies_module_functions.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "actor_module(program(\"Clock\"), \"Clock\", \"hird_ticker\")"
---
%% Generated from src/clock.hird by the Hirð compiler. Do not edit.
%% src/clock.hird:3
-module(hird_ticker).
-behaviour(gen_server).
-export([start_link/1]).
-export([init/1, handle_call/3, handle_cast/2]).

start_link(S) ->
    gen_server:start_link(?MODULE, S, []).

init(S) ->
    {ok, S}.

handle_call(Request, _From, _State) ->
    erlang:error({unexpected_call, Request}).

handle_cast(tick, {st, N}) ->
    {noreply, {st, hird_clock:bump(N)}};
handle_cast(via, {st, N}) ->
    {noreply, begin
        F = fun hird_clock:bump/1,
        {st, F(N)}
    end}.
