crates/hird-codegen/tests/snapshots/emit__snapshot_actor_schedules_itself.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "behaviour_module(program(\"Timed\"), \"Timed\", \"hird_heart\")"
---
%% Generated from src/timed.hird by the Hirð compiler. Do not edit.
%% src/timed.hird:3
-module(hird_heart).
-behaviour(gen_server).
-export([start_link/1]).
-export([init/1, handle_call/3, handle_cast/2]).

start_link(C) ->
    gen_server:start_link(?MODULE, C, []).

init(C) ->
    {ok, case C of
        {cfg, Clock, Period} ->
            _First = hird_clock:schedule(Clock, self(), beat, Period),
            C
    end}.

handle_call(get, R, State@1 = St) ->
    hird_actor:outcome(begin
        _Sent = gen_server:reply(R, {status, 1}),
        {continue, St}
    end, State@1).

handle_cast(beat, State@1 = {cfg, Clock, Period}) ->
    hird_actor:outcome(begin
        _Next = hird_clock:schedule(Clock, self(), beat, Period),
        {continue, {cfg, Clock, Period}}
    end, State@1).
