crates/hird-codegen/tests/snapshots/emit__snapshot_adt_match_and_constructors.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "emit(program(\"Opt\"), \"Opt\")"
---
%% Generated from src/opt.hird by the Hirð compiler. Do not edit.
-module(hird_opt).
-export([unwrap/1, hird_tools@/0]).

%% src/opt.hird:2
unwrap(Opt) ->
    case Opt of
        {some, X} ->
            X;
        none ->
            0
    end.

hird_tools@() ->
    #{tools => #{},
        types => #{
            option => [{some, <<"Some"/utf8>>, [{param, 0}]},
                {none, <<"None"/utf8>>, []}]}}.
