crates/hird-codegen/tests/snapshots/emit__snapshot_clock_schedule_and_request_timeout.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "emit(program(\"Timed\"), \"Timed\")"
---
%% Generated from src/timed.hird by the Hirð compiler. Do not edit.
-module(hird_timed).
-export([patient/2, prompt/2, kick/2, hird_tools@/0]).

%% src/timed.hird:20
patient(P, _Handlers@) ->
    gen_server:call(P, get, 60000).

%% src/timed.hird:21
prompt(P, _Handlers@) ->
    gen_server:call(P, get, 5000).

%% src/timed.hird:22
kick(P, _Handlers@) ->
    hird_clock:schedule(hird_clock:real(), P, beat, 10).

hird_tools@() ->
    #{tools => #{},
        types => #{
            cfg => [{cfg, <<"Cfg"/utf8>>, [dynamic, int]}],
            heart_msg => [{beat, <<"Beat"/utf8>>, []},
                {get, <<"Get"/utf8>>, [dynamic]}],
            status => [{status, <<"Status"/utf8>>, [int]}]}}.
