crates/hird-codegen/tests/snapshots/emit__snapshot_crash_in_match_arm.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "emit(program(\"Boom\"), \"Boom\")"
---
%% Generated from src/boom.hird by the Hirð compiler. Do not edit.
-module(hird_boom).
-export([unwrap/1, hird_tools@/0]).

%% src/boom.hird:2
unwrap(O) ->
    case O of
        {some, X} ->
            X;
        none ->
            erlang:error(<<"empty"/utf8>>)
    end.

hird_tools@() ->
    #{tools => #{},
        types => #{
            option => [{some, <<"Some"/utf8>>, [{param, 0}]},
                {none, <<"None"/utf8>>, []}]}}.
