crates/hird-codegen/tests/snapshots/emit__snapshot_effectful_function_and_tool_dispatch.snap
---
source: crates/hird-codegen/tests/emit.rs
expression: "emit(program(\"Repo\"), \"Repo\")"
---
%% Generated from src/repo.hird by the Hirð compiler. Do not edit.
-module(hird_repo).
-export([scan/2, hird_tools@/0]).

%% src/repo.hird:4
scan(P, Handlers@) ->
    hird_tool_dispatch:call(read_repo, [], <<"Repo.scan"/utf8>>, Handlers@, #{path => P}).

hird_tools@() ->
    #{tools => #{
            read_repo => #{
                name => <<"ReadRepo"/utf8>>,
                params => 0,
                args => {record, [{path, {adt, path, []}}]},
                result => {adt, st, []},
                error => dynamic}},
        types => #{
            path => [{path, <<"Path"/utf8>>, [string]}],
            st => [{st, <<"St"/utf8>>, [int]}]}}.
